# ReOS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  xmake.lua
include/arch/: arch.hpp
include/arch/riscv/boot/: sbi.hpp
include/arch/riscv/kernel/mm/: address.hpp  allocator.hpp  memory.hpp  pagetable.hpp
include/kernel/mm/allocator/: allocator_trait.hpp  page_allocator.hpp  slab_allocator.hpp
include/kernel/mm/paging/: page_table.hpp
include/kernel/mm/vm/: address.hpp
include/lib/: assert.hpp  panic.hpp  type_utility.hpp  utility.hpp
src/: config.ixx
src/arch/: arch.ixx
src/arch/riscv/: link.ld  riscv.ixx
src/arch/riscv/boot/: entry.S  sbi.ixx
src/arch/riscv/lib/: panic.ixx
src/arch/riscv/mm/: address.ixx  allocator.ixx  mmu.ixx  page_table.ixx
src/contract/arch/: arch_base.ixx
src/contract/lib/: container.ixx
src/contract/mm/: address.ixx  allocator.ixx  page_table.ixx
src/contract/task/: lock.ixx
src/kernel/: main.cpp
src/kernel/mm/: allocator.ixx  basic_allocator.cppm  generic_allocator.cppm
src/kernel/sync/: spin.ixx
src/lib/ds/: list.ixx  string.ixx  vector.ixx
src/lib/tools/: assert.ixx  panic.ixx  type_utility.ixx  utility.ixx
